--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "tummyfit",
   "version": "1.0.0",
   "description": "backend for tummyfit application",
-  "main": "app.ts",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon app.ts",
+    "start:dev": "nodemon index.ts",
     "init:prod": "npm i&&npx prisma migrate deploy",
-    "start:prod": "tsc&&node ./builds/app.js"
+    "start:prod": "tsc&&node ./builds/index.js"
   },
   "author": "tummyfit",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
