--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.2",
