--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon index.ts",
     "init:prod": "npm i&&npx prisma migrate deploy",
-    "start:prod": "tsc&&node ./builds/index.js"
+    "start:prod": "npx tsc&&node ./builds/index.js"
   },
   "author": "tummyfit",
   "license": "ISC",
