--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "backend for tummyfit application",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "ts-node ./seeders/seed.ts&&nodemon index.ts",
+    "start:dev": "ts-node ./seeders/seed.ts&&nodemon bin/www",
     "init:prod": "npm i&&npx prisma migrate deploy&&npx tsc",
-    "start:prod": "node ./builds/seeders/seed.js&&node ./builds/index.js"
+    "start:prod": "node ./builds/seeders/seed.js&&node ./builds/www.js",
+    "test": "npx jest --runInBand  --no-cache"
   },
   "author": "tummyfit",
   "license": "ISC",
@@ -30,12 +30,18 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.1.5",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "jest": "^29.5.0",
     "prisma": "^4.14.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
