--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "ts-node ./seeders/seed.ts&&nodemon bin/www",
     "init:prod": "npm i&&npx prisma migrate deploy&&npx tsc",
-    "start:prod": "node ./builds/seeders/seed.js&&node ./builds/www.js",
+    "start:prod": "node ./builds/seeders/seed.js&&node ./builds/bin/www.js",
     "test": "npx jest --runInBand  --no-cache"
   },
   "author": "tummyfit",
