--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "ts-node ./seeders/seed.ts&&nodemon bin/www",
     "init:prod": "npm i&&npx prisma migrate deploy&&npx tsc",
-    "start:prod": "node ./builds/seeders/seed.js&&node ./builds/www.js",
+    "start:prod": "node ./builds/seeders/seed.js&&node ./builds/bin/www.js",
     "test": "npx jest --runInBand  --no-cache"
   },
   "author": "tummyfit",
@@ -37,11 +37,8 @@
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
-    "jest": "^29.5.0",
     "prisma": "^4.14.0",
-    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-mockito": "^2.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
