feat:adding prediction meal's plan

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend for tummyfit application",
   "main": "index.ts",
   "scripts": {
-    "start:dev": "ts-node ./seeders/seed.ts&&nodemon bin/www",
+    "start:dev": "ts-node ./seeders/seed.ts&&nodemon bin/www.ts",
+    "start": "npx ts-node index.ts",
     "init:prod": "npm i&&npx prisma migrate deploy&&npx tsc",
     "start:prod": "node ./builds/seeders/seed.js&&node ./builds/bin/www.js",
     "test": "npx jest --runInBand  --no-cache"
@@ -12,8 +13,8 @@
   "author": "tummyfit",
   "license": "ISC",
   "dependencies": {
-    "@joi/date": "^2.1.0",
     "@prisma/client": "^4.14.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
