--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "tummyfit",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^6.11.0",
     "@prisma/client": "^4.14.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
