--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT= #Contoh 5000
 JWT_SECRET_KEY= #contoh nya string acak agar susah dibaca
 DATABASE_URL= #pastekan Data source name untuk RDBMS yang digunakan
+BUCKET= #namabucket untuk di gcp
