--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dev": "ts-node ./seeders/seed.ts&&nodemon bin/www.ts",
     "start": "npx ts-node index.ts",
     "init:prod": "npm i&&npx prisma migrate deploy&&npx tsc",
-    "start:prod": "node ./builds/seeders/seed.js&&node ./builds/bin/www.js",
+    "start:prod": "node ./builds/bin/www.js",
     "test": "npx jest --runInBand  --no-cache"
   },
   "author": "tummyfit",
